# modem-at-chat

./: .gitignore  CMakeLists.txt  README.md  build.sh  chat.c  main.c  modem-chat-at
